Adds resulting pdf

--- a/HW2/artifacts/file.tex
+++ b/HW2/artifacts/file.tex
@@ -4,7 +4,7 @@
 \usepackage{{graphicx}}
 \title{Test LaTeX file}
 \author{galloDest}
-\date{February 17, 2022}
+\date{February 22, 2022}
 \begin{document}
 
 \maketitle
@@ -13,7 +13,7 @@
 	\begin{tabular} { c | c | c }
 	1 & 2 & 3 \\
 	\hline
-	a & b & c \\
+	a & b & Тест русского языка \\
 	\hline
 	$4\times 3$ & $\Rightarrow $ & 12
 	\end{tabular}
